tests/success/test3.tds
integer main(){
    integer x;
    integer y;
    integer z;
    x = x * (1 + 2) + z;
    return x;
}