tests/fail/test_type_error_01.tds
integer main(){
    integer y;
    y = 1 + true;
    return y;
}